Fixing flag locations on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -475,12 +475,12 @@ p {
 		width: 270px;
 	}
 	.travel .map-flag1 {
-		left: -1%;
-		top: 18%; 
+		left: -9%;
+		top: 11%; 
 	}
 	.travel .map-flag2 {
-		left: 69%;
-		top: 45%; 
+		left: 65%;
+		top: 39%; 
 	}
 }
 @media (max-width: 480px) {
@@ -499,12 +499,12 @@ p {
 		max-width: 270px;
 	}
 	.travel .map-flag1 {
-		left: -4%;
-		top: 16%; 
+		left: -9%;
+		top: 11%; 
 	}
 	.travel .map-flag2 {
-		left: 68%;
-		top: 43%; 
+		left: 65%;
+		top: 39%; 
 	}
 }
 @media (min-width: 768px) and (max-width: 979px) {
